--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: url(../images/cover-image-dark.png);
+  --text-color: #f1b2ce;
+  --text-decor-color: #000028;
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  --bg-color: #000028;
+  --shadow-color: #ff0070;
+  --btn-color: #ff0070;
+  --section-heading-color: #ff0070;
 }
