--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,38 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: url(../images/cover-image-light.png);
+  --text-color: #353430;
+  --text-decor-color: #353430;
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --bg-color: #fff1f7;
+  --shadow-color: #ff0070;
+  --btn-color: #353430;
+  --section-heading-color: #353430;
+}
+
+.page.theme_light .light {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-color: #353430;
+    --text-decor-color: #353430;
+    --title-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --bg-color: #fff1f7;
+    --shadow-color: #ff0070;
+    --btn-color: #353430;
+    --section-heading-color: #353430;
+  }
+
+  .light {
+    display: none;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
 }
