--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,384 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+
+  background-color: var(--bg-color, #000028);
+  background-image: url(../images/cover-image-dark.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  background-position: center;
+  background-attachment: fixed;
+  color: var(--text-color);
+}
+
+/* HEADER */
+
+.header {
+  position: relative;
+  display: grid;
+  align-content: start;
+  grid-template-columns: 1fr;
+  padding-block: 75px 66px;
+  padding-inline: 10px;
+  min-block-size: 100vh;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  inset-block-start: 10px;
+  inset-inline-end: 10px;
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-start: 1px solid var(--accent-color, #ff0070);
+  border-inline-end: 1px solid var(--accent-color, #ff0070);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  inset-inline-start: 10px;
+  inset-block-end: 10px;
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: 1px solid var(--accent-color, #ff0070);
+  border-block-end: 1px solid var(--accent-color, #ff0070);
+}
+
+.light {
+  position: absolute;
+  inset-inline-end: 38px;
+  inset-block-start: 10px;
+  color: var(--accent-color, #ff0070);
+  text-transform: uppercase;
+}
+
+.light::after {
+  content: '';
+  position: absolute;
+  inset-inline-end: -19px;
+  inset-block-start: 8px;
+  inline-size: 9px;
+  block-size: 9px;
+  border-radius: 50%;
+  background-color: var(--accent-color, #ff0070);
+  box-shadow: 0 0 4px 2px var(--accent-color, #ff0070);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin-block-end: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  background-color: transparent;
+  padding: 0.5px 12px;
+  line-height: 23px;
+  color: var(--btn-color);
+  text-transform: lowercase;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--btn-color);
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--btn-color, #ff0070);
+}
+
+.title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  color: var(--title-color, #db00ff);
+  text-shadow: 4px 4px 0 var(--shadow-color, #ff0070);
+  margin-block-end: 55px;
+}
+
+.title-decor {
+  align-self: start;
+  background-color: var(--accent-color, #ff0070);
+  color: var(--text-decor-color, #000028);
+  font-weight: bold;
+  line-height: 23.4px;
+}
+
+/* SECTIONS */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(3.125rem, 1.3359rem + 7.6336vw, 5rem);
+  padding-block-start: 40px;
+}
+
+.section {
+  display: grid;
+  padding-inline: 10px;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.article__link {
+  text-decoration: none;
+  color: currentColor;
+  text-shadow: 2px 2px var(--accent-color, #ff0070);
+}
+
+.article__link:focus {
+  outline: none;
+}
+
+.article__link:focus-visible {
+  outline: 1px solid currentColor;
+}
+
+.section__heading {
+  font-size: 18px;
+  color: var(--section-heading-color, #ff0070);
+}
+
+.artticle__subheading {
+  font-size: 18px;
+  font-weight: normal;
+  margin-block-end: 10px;
+}
+
+.article__heading {
+  margin-block-end: 10px;
+  align-self: auto;
+  font-size: 18px;
+}
+
+.section-how__article-heading {
+  margin-block-end: 0;
+  font-size: 18px;
+  align-self: auto;
+}
+
+.article__paragraph {
+  line-height: 23.4px;
+}
+
+.section-how .article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Gallery */
+
+.section-gallery {
+  padding-inline: 10px;
+  padding-block-end: 40px;
+}
+
+.section-gallery__heading {
+  margin-block-end: 10px;
+  font-size: 18px;
+}
+
+.gallery__image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+/* FOOTER */
+
+.footer {
+  position: relative;
+  min-block-size: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__title {
+  margin: 0;
+  text-shadow: 2px 2px 0 var(--shadow-color, #ff0070);
+}
+
+/* MEDIA QUERIES */
+
+@media (width > 500px) {
+  .header {
+    padding-block: 192px 183px;
+    padding-inline: 20px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .decorated-zone::before {
+    inset-block-start: 20px;
+    inset-inline-end: 20px;
+  }
+
+  .decorated-zone::after {
+    inset-inline-start: 20px;
+    inset-block-end: 20px;
+  }
+
+  .light {
+    inset-inline-end: 48px;
+    inset-block-start: 20px;
+  }
+
+  .title-decor {
+    grid-column: 2 / -1;
+  }
+
+  .title {
+    margin-block-end: 165px;
+    grid-column: 1 / -1;
+  }
+
+  .footer__title {
+    margin: 0;
+  }
+
+  .header__theme-menu {
+    margin-block-end: 173px;
+    grid-column: 1 / -1;
+  }
+
+  .main {
+    padding-block-start: 60px;
+  }
+
+  .section {
+    padding-inline: 20px;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  /* SECTION - WHY */
+
+  .section-why .section__heading {
+    grid-row: 1 / 3;
+  }
+
+  /* SECTION - WHAT */
+
+  .section-what .article {
+    grid-column: 1 / -1;
+  }
+
+  /* GALLERY */
+
+  .section-gallery {
+    padding-inline: 20px;
+    padding-block-end: 60px;
+  }
+
+  .section-gallery__heading {
+    font-size: 18px;
+    margin-block-end: 20px;
+    line-height: 23.4px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .gallery__image--1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .gallery__image--2 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__image--3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__image--4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .gallery__image--5 {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+}
+
+@media (width >= 768px) {
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >= 960px) {
+  .header {
+    padding-block: 20px 134px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+    margin-block-end: 273px;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .title {
+    margin-block-end: 114px;
+  }
+
+  .footer__title {
+    margin: 0;
+  }
+
+  /* SECTION - WHAT */
+
+  .section-what {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section-what .section__heading {
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
+    width: max(calc((100% - 40px) / 3));
+  }
+
+  .section-what .article {
+    grid-column: auto;
+  }
+}
+
+@media (hover: hover) {
+  .header__theme-menu-button:hover {
+    border: 1px solid var(--btn-color, #ff0070);
+  }
+
+  .article__link:hover {
+    border-bottom: 2px solid currentColor;
+  }
 }
