--- a/styles/light.css
+++ b/styles/light.css
@@ -14,9 +14,11 @@
   --text-decor-color: #353430;
   --title-color: #ffc2e6;
   --accent-color: #ff8dcb;
+  --decorated-color: #353430;
   --bg-color: #fff1f7;
   --shadow-color: #ff8dcb;
   --btn-color: #353430;
+  --btn-hover-color: rgba(53, 52, 48, 0.4);
   --section-heading-color: #353430;
 }
 
@@ -36,9 +38,11 @@
     --text-decor-color: #353430;
     --title-color: #ffc2e6;
     --accent-color: #ff8dcb;
+    --decorated-color: #353430;
     --bg-color: #fff1f7;
     --shadow-color: #ff8dcb;
     --btn-color: #353430;
+    --btn-hover-color: rgba(53, 52, 48, 0.4);
     --section-heading-color: #353430;
   }
 
