--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,12 @@
 .header {
   position: relative;
   display: grid;
-  align-content: start;
   grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
   padding-block: 75px 66px;
   padding-inline: 10px;
-  min-block-size: 100vh;
+  block-size: 100vh;
+  min-block-size: 668px;
 }
 
 .decorated-zone::before {
@@ -31,8 +32,8 @@
   inset-inline-end: 10px;
   inline-size: 25px;
   block-size: 25px;
-  border-block-start: 1px solid var(--accent-color, #ff0070);
-  border-inline-end: 1px solid var(--accent-color, #ff0070);
+  border-block-start: 1px solid var(--decorated-color, #ff0070);
+  border-inline-end: 1px solid var(--decorated-color, #ff0070);
 }
 
 .decorated-zone::after {
@@ -42,8 +43,8 @@
   inset-block-end: 10px;
   inline-size: 25px;
   block-size: 25px;
-  border-inline-start: 1px solid var(--accent-color, #ff0070);
-  border-block-end: 1px solid var(--accent-color, #ff0070);
+  border-inline-start: 1px solid var(--decorated-color, #ff0070);
+  border-block-end: 1px solid var(--decorated-color, #ff0070);
 }
 
 .light {
@@ -68,7 +69,7 @@
 
 .header__theme-menu {
   justify-self: end;
-  margin-block-end: 65px;
+  align-self: start;
 }
 
 .header__theme-menu-list {
@@ -105,11 +106,14 @@
   line-height: 82.5%;
   color: var(--title-color, #db00ff);
   text-shadow: 4px 4px 0 var(--shadow-color, #ff0070);
-  margin-block-end: 55px;
+  align-self: center;
+}
+
+.header__parapgraph {
+  align-self: end;
 }
 
 .title-decor {
-  align-self: start;
   background-color: var(--accent-color, #ff0070);
   color: var(--text-decor-color, #000028);
   font-weight: bold;
@@ -209,7 +213,8 @@
 
 .footer {
   position: relative;
-  min-block-size: 100vh;
+  block-size: 100vh;
+  min-block-size: 668px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -222,7 +227,7 @@
 
 /* MEDIA QUERIES */
 
-@media (width > 500px) {
+@media (width > 590px) {
   .header {
     padding-block: 192px 183px;
     padding-inline: 20px;
@@ -248,9 +253,13 @@
     grid-column: 2 / -1;
   }
 
+  .header__parapgraph {
+    margin-block-start: 5vw;
+  }
+
   .title {
-    margin-block-end: 165px;
     grid-column: 1 / -1;
+    margin-inline-start: -20px;
   }
 
   .footer__title {
@@ -258,7 +267,6 @@
   }
 
   .header__theme-menu {
-    margin-block-end: 173px;
     grid-column: 1 / -1;
   }
 
@@ -301,29 +309,12 @@
     gap: 20px;
   }
 
-  .gallery__image--1 {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
+  .gallery__image--tall {
+    grid-row: span 2;
   }
 
-  .gallery__image--2 {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
-  }
-
-  .gallery__image--3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
-  }
-
-  .gallery__image--4 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-
-  .gallery__image--5 {
-    grid-column: 2 / 4;
-    grid-row: 3 / 4;
+  .gallery__image--wide {
+    grid-column: span 2;
   }
 }
 
@@ -346,10 +337,6 @@
 
   .header__theme-menu-list {
     flex-direction: row;
-  }
-
-  .title {
-    margin-block-end: 114px;
   }
 
   .footer__title {
@@ -375,10 +362,10 @@
 
 @media (hover: hover) {
   .header__theme-menu-button:hover {
-    border: 1px solid var(--btn-color, #ff0070);
+    border: 1px solid var(--btn-hover-color, rgba(255, 0, 111, 0.4));
   }
 
   .article__link:hover {
-    border-bottom: 2px solid currentColor;
+    border-bottom: 1px solid currentColor;
   }
 }
